src/test/ui/issues/issue-54302-cases.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/issue-54302-cases.rs:63:5
   |
LL |     <u32 as RefFoo<u32>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo<'static, u32>` would have to be implemented for the type `&'0 u32`, for any lifetime `'0`
   = note: but `Foo<'_, u32>` is actually implemented for the type `&'1 u32`, for some specific lifetime `'1`

error: implementation of `Foo` is not general enough
  --> $DIR/issue-54302-cases.rs:69:5
   |
LL |     <i32 as RefFoo<i32>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo<'static, i32>` would have to be implemented for the type `&'0 i32`, for any lifetime `'0`
   = note: but `Foo<'_, i32>` is actually implemented for the type `&'1 i32`, for some specific lifetime `'1`

error: implementation of `Foo` is not general enough
  --> $DIR/issue-54302-cases.rs:75:5
   |
LL |     <u64 as RefFoo<u64>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo<'static, u64>` would have to be implemented for the type `&'0 u64`, for any lifetime `'0`
   = note: but `Foo<'_, u64>` is actually implemented for the type `&'1 u64`, for some specific lifetime `'1`

error: implementation of `Foo` is not general enough
  --> $DIR/issue-54302-cases.rs:81:5
   |
LL |     <i64 as RefFoo<i64>>::ref_foo(a)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Foo<'static, i64>` would have to be implemented for the type `&'0 i64`, for any lifetime `'0`
   = note: but `Foo<'_, i64>` is actually implemented for the type `&'1 i64`, for some specific lifetime `'1`

error: aborting due to 4 previous errors

